--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ quarkus.datasource.url=jdbc:h2:mem:test
 
 quarkus.log.console.enable=true
 quarkus.log.console.level=ALL
+quarkus.package.uber-jar=true 
