--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,9 @@
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
+        <configuration>
+            <uberJar>true</uberJar>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -146,4 +149,3 @@
     </profile>
   </profiles>
 </project>
-
